# mos-backend

./: pyproject.toml
src/: main.py
src/application/: __init__.py  mos.py
src/config/: __init__.py  settings.py
src/dependencies/: stream_dep.py
src/models/: __init__.py  stream.py
src/routes/v1/: __init__.py  health.py  stream.py
