[project]
name = "mos-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "sebastianmontoya",email = "sebastianmontoya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "getstream (>=2.5.17,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiortc (>=1.14.0,<2.0.0)",
    "av (>=16.0.1,<17.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pesq (>=0.0.4,<0.0.5)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
